--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^10.30.0",
     "@supabase/supabase-js": "^2.86.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
