--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "vercel": "^41.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
